[metadata]
name = graph_algorithms_the_fun_way
version = 0.1.0
author = Elliot Rodriguez
author_email = elliotrodriguez72@gmail.com
description = A Python library for graph algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elliotrodriguez/graph_algorithms_the_fun_way
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11

[options.extras_require]
dev =
    pytest
    pytest-cov

[options.packages.find]
where = classes

[tool:pytest]
addopts = --cov=classes --cov-fail-under=80 --cov-report=term-missing
testpaths = tests

[coverage:run]
branch = True

[coverage:report]
show_missing = True 